bugfix insulation costs and new results analysis